// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.marketplaces getMarketplaces should filter out unknown marketplaces 1`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "fr",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "de",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "vendorId": "A3JWKAKR8XB7XF",
  },
]
`;

exports[`lib.client.marketplaces getMarketplaces should ignore marketplaces without an API endpoint 1`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "fr",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "code": "nl",
    "domain": "amazon.nl",
    "id": "A1805IZSGTT6HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Netherlands",
    "region": "eu",
    "vendorId": "A17D2BRD4YMT0X",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "uk",
    "domain": "amazon.co.uk",
    "id": "A1F83G8C2ARO7P",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "United Kingdom",
    "region": "eu",
    "vendorId": "A3P5ROKL5A1OLE",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "de",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "vendorId": "A3JWKAKR8XB7XF",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "es",
    "domain": "amazon.es",
    "id": "A1RKKUPIHCS9HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Spain",
    "region": "eu",
    "vendorId": "A1AT7YVPFBWXBL",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "it",
    "domain": "amazon.it",
    "id": "APJ6JRA9NG5V4",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Italy",
    "region": "eu",
    "vendorId": "A11IL2PNWYJU7H",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 1`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "de",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "vendorId": "A3JWKAKR8XB7XF",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "es",
    "domain": "amazon.es",
    "id": "A1RKKUPIHCS9HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Spain",
    "region": "eu",
    "vendorId": "A1AT7YVPFBWXBL",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "fr",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "it",
    "domain": "amazon.it",
    "id": "APJ6JRA9NG5V4",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Italy",
    "region": "eu",
    "vendorId": "A11IL2PNWYJU7H",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "uk",
    "domain": "amazon.co.uk",
    "id": "A1F83G8C2ARO7P",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "United Kingdom",
    "region": "eu",
    "vendorId": "A3P5ROKL5A1OLE",
  },
  Object {
    "code": "tr",
    "domain": "amazon.com.tr",
    "id": "A33AVAJ2PDY3EV",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Turkey",
    "region": "eu",
    "vendorId": "A1UNQM1SR2CHM",
  },
  Object {
    "code": "eg",
    "id": "ARBP9OOSHTCHU",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Egypt",
    "region": "eu",
  },
  Object {
    "code": "sa",
    "domain": "amazon.sa",
    "id": "A17E79C6D8DWNP",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Saudi Arabia",
    "region": "eu",
    "vendorId": "A2XPWB6MYN7ZDK",
  },
  Object {
    "code": "nl",
    "domain": "amazon.nl",
    "id": "A1805IZSGTT6HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Netherlands",
    "region": "eu",
    "vendorId": "A17D2BRD4YMT0X",
  },
  Object {
    "code": "se",
    "domain": "amazon.se",
    "id": "A2NODRKZP88ZB9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Sweden",
    "region": "eu",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 2`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api.amazon.com",
    "code": "us",
    "domain": "amazon.com",
    "id": "ATVPDKIKX0DER",
    "imagesDomain": "images-na.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.com",
    "name": "United States",
    "region": "na",
    "vendorId": "ATVPDKIKX0DER",
  },
  Object {
    "code": "br",
    "domain": "amazon.com.br",
    "id": "A2Q3Y263D00KWC",
    "imagesDomain": "images-na.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.com",
    "name": "Brazil",
    "region": "na",
    "vendorId": "A1ZZFT5FULY4LN",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 3`] = `
Array [
  Object {
    "code": "sg",
    "domain": "amazon.sg",
    "id": "A19VAU5U5O7RUS",
    "imagesDomain": "images-fe.ssl-images-amazon.com",
    "mwsDomain": "mws-fe.amazonservices.com",
    "name": "Singapore",
    "region": "fe",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 4`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api.amazon.com",
    "code": "ca",
    "domain": "amazon.ca",
    "id": "A2EUQ1WTGCTBG2",
    "imagesDomain": "images-na.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.ca",
    "name": "Canada",
    "region": "na",
    "vendorId": "A3DWYIK6Y9EEQB",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 5`] = `
Array [
  Object {
    "code": "in",
    "domain": "amazon.in",
    "id": "A21TJRUUN4KGV",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.in",
    "name": "India",
    "region": "eu",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 6`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-fe.amazon.com",
    "code": "jp",
    "domain": "amazon.co.jp",
    "id": "A1VC38T7YXB528",
    "imagesDomain": "images-fe.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.jp",
    "name": "Japan",
    "region": "fe",
    "vendorId": "AN1VRQENFRJN5",
  },
]
`;
